# WEnets

./: .gitignore  .gitmodules  README.md
cplusplus/: README.md  Wawenet.sln
matlab/: 20220507_IU_ScaledMOS_ 2.0_ 6.0_a75c9fb04ff942d48450ebb1de24eb51.mat  20220507_POLQAMOSLQO_PESQMOSLQO_STOI_PEMO_ViSQOL3_c310_ESTOI_SIIBGauss_5d8c59ea6bc24b019b4fe6ac5b87d3db.mat  20220507_mos_noi_col_dis_bd9851082f6a4a06ad63f71c89daee27.mat  WAWEnet.m  WAWEnetCNN.m  WAWEnetPars_1.mat  WAWEnetPars_2.mat  WAWEnetPars_3.mat  WAWEnetPars_4.mat  demo.m  readme.md  wavNames.txt
onnx/: 20200801_WAWEnetFD13FC96AvgReLU_PESQMOSLQO_final_onnx_eval.onnx  20200801_WAWEnetFD13FC96AvgReLU_POLQAMOSLQO_final_onnx_eval.onnx  20200802_WAWEnetFD13FC96AvgReLU_PEMO_final_onnx_eval.onnx  20200802_WAWEnetFD13FC96AvgReLU_STOI_final_onnx_eval.onnx  20220507_IU_ScaledMOS_ 2.0_ 6.0_a75c9fb04ff942d48450ebb1de24eb51.onnx  20220507_POLQAMOSLQO_PESQMOSLQO_STOI_PEMO_ViSQOL3_c310_ESTOI_SIIBGauss_5d8c59ea6bc24b019b4fe6ac5b87d3db.onnx  20220507_mos_noi_col_dis_bd9851082f6a4a06ad63f71c89daee27.onnx  readme.md
python/: README.md  wenets_env.yaml  (+3 more)
python/wawenets/: demo.py  get_param_counts.ipynb  pyproject.toml  train.py  wawenets.py  wawenets_cli.py
python/wawenets/config/: config.yaml.template  log_config.yaml  train_config.yaml
python/wawenets/tests/: test_data.py  test_inference.py  test_model.py  test_wawenets.py
python/wawenets/wawenet_trainer/: analysis.py  callbacks.py  lightning_data.py  lightning_model.py  log_performance.py  train.py  training_config.py  transforms.py
python/wawenets/wawenets/: __init__.py  data.py  generic_logger.py  inference.py  model.py  postprocess.py  reference_models.py  stl_wrapper.py
python/wawenets/weights/: 20200801_WAWEnetFD13FC96AvgReLU_PESQMOSLQO.pt  20200801_WAWEnetFD13FC96AvgReLU_PESQMOSLQO_final_pytorch_eval.pt  20200801_WAWEnetFD13FC96AvgReLU_POLQAMOSLQO_.pt  20200802_WAWEnetFD13FC96AvgReLU_PEMO.pt  20200802_WAWEnetFD13FC96AvgReLU_STOI.pt  POLQAMOSLQO_PESQMOSLQO_STOI_PEMO_ViSQOL3_c310_ESTOI_SIIBGauss_5d8c59ea6bc24b019b4fe6ac5b87d3db.pt  mos_noi_col_dis_PESQMOSLQO_POLQAMOSLQO_PEMO_ViSQOL3_C310_STOI_ESTOI_SIIBGauss_5dd8fccf49a84289b9260524ac38ccbe.pt
(+23 files in other folders)
