[tool.poetry]
name = "wawenets"
version = "0.1.0"
description = ""
authors = ["Andrew Catellier <acatellier@ntia.doc.gov>"]
include = [
    "weights/20200801_WAWEnetFD13FC96AvgReLU_PESQMOSLQO_final_pytorch_eval.pt"
    "speech/T000053_Q159_D401_48.wav"
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
