[tool.poetry]
name = "wawenets"
version = "0.1.0"
description = ""
authors = ["Andrew Catellier <acatellier@ntia.doc.gov>"]
include = [
    "weights/20200801_WAWEnetFD13FC96AvgReLU_PESQMOSLQO.pt",
    "weights/20200801_WAWEnetFD13FC96AvgReLU_POLQAMOSLQO_.pt",
    "weights/20200802_WAWEnetFD13FC96AvgReLU_PEMO.pt",
    "weights/20200802_WAWEnetFD13FC96AvgReLU_STOI.pt",
    "weights/POLQAMOSLQO_PESQMOSLQO_STOI_PEMO_ViSQOL3_c310_ESTOI_SIIBGauss_5d8c59ea6bc24b019b4fe6ac5b87d3db.pt",
    "weights/mos_noi_col_dis_PESQMOSLQO_POLQAMOSLQO_PEMO_ViSQOL3_C310_STOI_ESTOI_SIIBGauss_5dd8fccf49a84289b9260524ac38ccbe.pt",
    "speech/T000053_Q159_D401_48.wav",
    "speech/T000093_Q446_D401.wav",
    "config/log_config.yaml",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
